[피로그래밍 클론코딩] feat: 인터뷰 클론코딩 완성

--- a/피로그래밍 클론코딩/Interview/styles/reset.css
+++ b/피로그래밍 클론코딩/Interview/styles/reset.css
@@ -1,4 +1,4 @@
-* {box-sizing: border-box;}
+* {box-sizing: border-box; background-color: #000000}
 html, body, h1, h2, p, div, span footer main,
 img, a {
     margin: 0;
