[피로그래밍 클론코딩] fix: 인터뷰 박스 햄버거 오류 수정

--- a/피로그래밍 클론코딩/Interview/styles/design.css
+++ b/피로그래밍 클론코딩/Interview/styles/design.css
@@ -60,7 +60,6 @@
 }
 .interview .interview_box:hover .more div:nth-child(3) {
     width: 10px; 
-    margin-left: auto;
 }
 .interview .interview_box .interview_box_top {
     background-color: #333333;
@@ -84,6 +83,9 @@
     gap: 6px;
     padding: 0;
 }
+.interview .interview_box_top .more div:nth-child(3) {
+    margin-left: auto;
+} 
 .interview .interview_box_top .more div { 
     width: 22px;
     height: 2px;
