--- a/MovieChatBot/templates/reviews/list.html
+++ b/MovieChatBot/templates/reviews/list.html
@@ -8,6 +8,7 @@
 
   <body>
     <h1>My Movie Reviews</h1>
+    <a href="{% url 'reviews:chat_page' %}">챗봇</a>
 
     <!-- TMDB → DB 저장 버튼 -->
     <form method="post" action="{% url 'reviews:tmdb_sync' %}">
